--- a/html/contact.html
+++ b/html/contact.html
@@ -83,12 +83,7 @@
   padding-bottom: 6px;
   font-family: "Montserrat", sans-serif;
 }
-@media only screen and (max-width: 766px) {
-  .main_h {
-    padding-top: 25px;
-    overflow: scroll;
-  }
-}
+
 
 .open-nav {
   max-height: 400px !important;
@@ -120,56 +115,28 @@
 .logo-img {
   margin-top: -10px;
 }
-@media only screen and (max-width: 766px) {
-  .logo {
-    float: none;
-  }
-  .logo-img {
-    margin-top:-20px;
-  }
-  .mobile-toggle {
-    display: block;
-    margin: 15px 0 0;
-  }
-}
+
 
 nav {
   float: right;
   width: 85%;
 }
-@media only screen and (max-width: 766px) {
-  nav {
-    width: 100%;
-  }
-}
+
 nav ul {
   list-style: none;
   overflow: hidden;
   text-align: right;
   float: right;
 }
-@media only screen and (max-width: 766px) {
-  nav ul {
-    padding-top: 10px;
-    margin-bottom: 22px;
-    float: left;
-    text-align: center;
-    width: 100%;
-  }
-}
+
+
 nav ul li {
   display: inline-block;
   margin-left: 35px;
   line-height: 1.5;
 }
 
-@media only screen and (max-width: 766px) {
-  nav ul li {
-    width: 100%;
-    padding: 7px 0;
-    margin: 0;
-  }
-}
+
 nav ul a, span {
   color: #888888;
   text-transform: uppercase;
@@ -186,7 +153,7 @@ nav button {
   color: #888888;
   font-size: 13px;
 }
-/***************/
+
 .container_list
 	{display:block;position:relative;float:left}
 
@@ -238,7 +205,7 @@ h2:after
 	border-right:8px solid transparent;
 	border-bottom:8px solid #fff
 	}
-/**************/
+
 #sub1
 {
     position: absolute;
@@ -275,7 +242,6 @@ p.sub-menu {
 
 
 
-
 @keyframes buble{
 	from{transform:rotate(45deg) translate(-50%,0) scale(.8,.8)}
 	to{transform:rotate(45deg) translate(-50%,0) scale(1,1)}
@@ -287,87 +253,25 @@ p.sub-menu {
 
 
 
-  [class*="show"]
+[class*="show"]
   	{display:block}
 
-  .show_list
-{text-align: left;
-    box-shadow: 1px 1px 18px #d8d6d6;/*animation:height 1s ease*/}
+.show_list{
+  text-align: left;
+  box-shadow: 1px 1px 18px #d8d6d6;/*animation:height 1s ease*/
+}
 
-  @keyframes height{
+@keyframes height{
   	from{padding:0;opacity:0}
   	to{padding:20px 0;opacity:1}
   	}
 
-
-  @keyframes width{
+@keyframes width{
   	from{width:0;opacity:0}
   	to{width:150px;opacity:1}
   	}
 
-    @media only screen and (max-width: 766px) {
 
-      .mobile-toggle {
-        display: block;
-      }
-      .mobile-toggle span {
-        width: 30px;
-        height: 4px;
-        margin-bottom: 6px;
-        border-radius: 1000px;
-        background: #8f8f8f;
-        display: block;
-      }
-      p.copyright {
-        width: 100%;
-      }
-
-      .btnList
-      		{width:100%;}
-
-      	.drop
-      		{display:none}
-
-      	.acc
-      		{display:inline-block}
-
-        .content_list {
-      		width:100%;
-      		top:0;
-      		position:relative;
-      		float:left
-      		}
-
-
-      	.content_list.left,
-      	.content_list.center,
-      	.content_list.right
-      		{left:0;right:0}
-
-      	.content_list.left:before,
-      	.content_list.center:before,
-      	.content_list.right:before
-      		{left:50%;transform:translate(-50%,0)}
-
-      	/* In small screen, when the "Button Nav" clicked, the "container_menu" will be replaced with the "show_menu" */
-
-      	.show_menu{
-      		background:#1a1a1a;
-      		width:100%;
-      		top:45px;
-      		display:block;
-      		position:absolute
-      		}
-          .show_list
-        {text-align: center;
-            box-shadow:none;}
-
-    p.sub-menu {
-        margin: 0x;}
-    }
-
-  /*
-/*******************/
 * {
   box-sizing: border-box;
 }
@@ -578,6 +482,104 @@ hr {
         margin-bottom:5%;
 }
 
+@media only screen and (max-width: 766px) {
+  nav {
+    width: 100%;
+  }
+  nav ul {
+    padding: 10px 0 0;
+    margin-bottom: 22px;
+    float: left;
+    text-align: center;
+    width: 100%;
+  }
+
+  .logo {
+    float: none;
+  }
+  .logo-img {
+    margin-top:-20px;
+  }
+  .mobile-toggle {
+    display: block;
+    margin: 15px 0 0;
+  }
+
+  .main_h {
+    padding-top: 25px;
+    overflow: scroll;
+  }
+
+      nav ul li {
+        width: 100%;
+        padding: 7px 0;
+        margin: 0;
+      }
+
+      .mobile-toggle {
+        display: block;
+      }
+      .mobile-toggle span {
+        width: 30px;
+        height: 4px;
+        margin-bottom: 6px;
+        border-radius: 1000px;
+        background: #8f8f8f;
+        display: block;
+      }
+      p.copyright {
+        width: 100%;
+      }
+
+      .btnList
+      		{width:100%;}
+
+      	.drop
+      		{display:none}
+
+      	.acc
+      		{display:inline-block}
+
+        .content_list {
+      		width:100%;
+      		top:0;
+      		position:relative;
+      		float:left
+      		}
+
+
+      	.content_list.left,
+      	.content_list.center,
+      	.content_list.right
+      		{left:0;right:0}
+
+      	.content_list.left:before,
+      	.content_list.center:before,
+      	.content_list.right:before
+      		{left:50%;transform:translate(-50%,0)}
+
+      	/* In small screen, when the "Button Nav" clicked, the "container_menu" will be replaced with the "show_menu" */
+
+      	.show_menu{
+      		background:#1a1a1a;
+      		width:100%;
+      		top:45px;
+      		display:block;
+      		position:absolute
+      		}
+          .show_list {
+            box-shadow:none;
+            text-align: center;
+            border: none;
+            background: #f8f8f8;
+            box-shadow: none;
+          }
+
+    p.sub-menu {
+        margin: 15px 0px;
+    }
+}
+/*******/
 </style>
 <!-- <nav class="navbar top-lvl-nav">
   <span class="brand">Pretty Princess Club</span>
